Added a new hero-image

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Math Background */
 body {
   font-family: Arial, sans-serif;
-  background: url('https://png.pngtree.com/background/20210712/original/pngtree-mathematics-education-calculator-ruler-hand-drawn-background-picture-image_1178879.jpg') no-repeat center center fixed;
+  background: url(WhatsApp\ Image\ 2025-07-21\ at\ 10.56.05\ AM.jpeg);
   background-size: cover;
   margin: 0;
   padding: 0;
